[gd_scene load_steps=2 format=3 uid="uid://lfit4m4bh0yk"]

[ext_resource type="Script" uid="uid://4nikf52r71vt" path="res://scripts/ChooseClass/ChooseClass.gd" id="1_nccj7"]

[node name="ChooseClass" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nccj7")

[node name="Standard" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.10850695
anchor_top = 0.11728395
anchor_right = 0.27430555
anchor_bottom = 0.35030866
offset_bottom = -1.5258789e-05
text = "Standard Dice Class"
metadata/_edit_use_anchors_ = true

[node name="Dungeon Master" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3003472
anchor_top = 0.11728395
anchor_right = 0.46614584
anchor_bottom = 0.35030866
offset_bottom = -1.5258789e-05
text = "Dungeon Master"
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.6666667
anchor_top = 0.7407407
anchor_right = 0.8888889
anchor_bottom = 0.9382716
disabled = true
text = "Select A Class"
metadata/_edit_use_anchors_ = true

[node name="ClassInfo" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5789931
anchor_top = 0.046296295
anchor_right = 0.9756944
anchor_bottom = 0.654321
offset_bottom = -3.0517578e-05
metadata/_edit_use_anchors_ = true

[node name="ClassName" type="RichTextLabel" parent="ClassInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024070023
anchor_top = 0.032994922
anchor_right = 0.6827133
anchor_bottom = 0.13451776
metadata/_edit_use_anchors_ = true

[node name="ClassFeatures" type="RichTextLabel" parent="ClassInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024070023
anchor_top = 0.20558375
anchor_right = 0.73522973
anchor_bottom = 0.65989846
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Standard" to="." method="_on_standard_pressed"]
[connection signal="pressed" from="Dungeon Master" to="." method="_on_dungeon_master_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
